prevent logo stretching.

--- a/2014/sass/_base/_content.scss
+++ b/2014/sass/_base/_content.scss
@@ -29,7 +29,7 @@ textarea::input-placeholder {
 // links
 a {
   text-decoration: none;
-  color: #5cba93;
+  color: #c3d6e4;
   cursor: pointer;
   @include transition(color .25s ease-out, border-color .25s ease-out, opacity .25s linear, background .25s ease-out);
   -webkit-backface-visibility: hidden;
