--- a/2014/sass/_modules/_box.scss
+++ b/2014/sass/_modules/_box.scss
@@ -173,7 +173,7 @@ height: 100%;
 
 .box_map {
   position: relative;
-  background: #5cba93;
+  background: #c3d6e4;
   padding: 0;
   margin: 24px;
   &> .box__header {
