--- a/2014/sass/_modules/_nav-bar.scss
+++ b/2014/sass/_modules/_nav-bar.scss
@@ -17,7 +17,7 @@
     line-height: 88px;
     height: 88px;
     &:hover {
-      background-color: #5cba93;
+      background-color: #c3d6e4;
     }
   }
   .nav__link_two-lines {
